--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+#alistair's ignored list
+*.iml
+.idea
+*.json
+
 # dependencies
 /node_modules
 
